nginx/4_second_client_for_external.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rhosplab-2
  name: nginx-client-2
  namespace: app-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rhosplab-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: rhosplab-2
      name: nginx-client-2
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        imagePullPolicy: IfNotPresent
        name: horizon
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        command:
        - bash
        - -c
        - |
          while true;
          do
            curl -sSI http://my-nginx.mesh-external.svc.cluster.local
            sleep 1
          done
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: default
      securityContext:
        privileged: true
      terminationGracePeriodSeconds: 30
