nginx/6_web_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rhosplab
  name: web-client
  namespace: app-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rhosplab
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: rhosplab
      name: web-client
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/tools:latest
        imagePullPolicy: IfNotPresent
        name: horizon
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        command:
        - bash
        - -c
        - |
          while true;
          do
            curl -sSI http://web-server.app-1.svc.cluster.local:8080
            sleep 1
          done
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: default
      securityContext:
        privileged: true
      terminationGracePeriodSeconds: 30
