nginx/5_web_server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: app-1
  labels:
    app: rh-web-server
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http-web
  selector:
    app: rh-web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rh-web-server
  name: web-server
  namespace: app-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rh-web-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: rh-web-server
      name: web-server
    spec:
      containers:
      - name: nginx-webserver
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-webserver-cm
