nginx/7_virtual_service.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: deny-all
  namespace: app-1
  labels:
    kiali_wizard: AuthorizationPolicy
spec: {}
---
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: allow2
  namespace: app-1
spec:
  selector:
    matchLabels:
      app: rh-web-server   #label of ocp server application in app-1 project
  rules:
    - from:
        - source:
            namespaces:
              - app-1
  action: ALLOW
